# kagi-tavily-bridge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  test-lint.yml
src/: adapter.rs  http.rs  kagi.rs  lib.rs  main.rs  models.rs
tests/: adapter_tests.rs  http_tests.rs
