[package]
name = "kagi-tavily-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = "=0.1.89"
axum = "=0.8.9"
clap = { version = "=4.6.1", features = ["derive", "env"] }
http = "=1.4.2"
kagi-openapi-rust = { git = "https://github.com/kagisearch/kagi-openapi-rust.git", rev = "1e48b47fc82dbc9fc67300a133aecdf10d4c3576" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "=0.5.3", features = ["util"] }
